--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,5 @@ walkdir = "2.4.0"
 yeslogic-fontconfig-sys = { git = "https://github.com/Vernoxvernax/fontconfig-rs.git" }
 
 [features]
-# default = [ "dlopen" ] # Uncomment this line for windows compiling. (idk how write build.rs yet)
+#default = [ "dlopen" ] # Uncomment this line for a dlopen build (I have no idea what this does, but I don't like it)
 dlopen = [ "yeslogic-fontconfig-sys/dlopen" ]
